- implemented alignment for wxGrid bool editor and renderer
- support wxListCtrl columns alignment for all platforms and not just MSW
- added wxToolBar Add/InsertTool(tool) (Janusz Piwowarski)
- WXR resources can now be used in Unicode builds
- it is now possible to use several wxFileHistory objects in the same menu
  by giving them different base IDs (Dimitri Schoolwerth)

- changed to type-safe wxSizerItemList for wxSizer child items
    Deprecated:
        wxSizer::Remove( wxWindow* )
            - it does not function as Remove would usually be expected to
              and destroy the window, use Detach instead
        wxSizer::GetOption(),
        wxSizer::SetOption()
            - wxSizer 'option' parameter was renamed 'proportion' to better
              reflect its action, use Get/SetProportion instead
        wxKeyEvent::KeyCode()
            - use GetKeyCode instead
        wxList:: Number, First, Last, Nth
            - use typesafe GetCount, GetFirst, GetLast, Item instead
        wxNode:: Next, Previous, Data
            - use typesafe Get* instead
        wxListBase::operator wxList&()
            - use typesafe lists instead
- Added wxTLW::SetShape with implementations for wxMSW and wxGTK (so
  far).


Unix:

- fixed compilation on systems with zlib installed but < 1.1.3 version
- fixed compilation on Solaris 7 with large files support enabled

wxGTK:

- added support for label mnemonics to GTK+2 build (Michael Moss)
- added native wxMessageDialog implementation for GTK+2 build
- fixed wxMenu::Remove (John Skiff and Benjamin Williams)
- made wxTextCtrl::EmulateKeyPress() work for Delete and Backspace
- fixed wxTopLevelWindow::ShowFullScreen to work with kwin, IceWM and
  window managers that support _NET_WM_STATE_FULLSCREEN
- added wxEVT_MENU_OPEN event generation
- fixed bug in generic file selector causing incomplete file extensions to
  be appended to filenames with no extension

wxMSW:
